--- a/Signal/translations/uk.lproj/InfoPlist.strings
+++ b/Signal/translations/uk.lproj/InfoPlist.strings
@@ -6,4 +6,4 @@ NSLocationWhenInUseUsageDescription = "Signal потребує доступу д
 NSMicrophoneUsageDescription = "Signal потребує доступу до мікрофона для можливості викликів та запису голосових повідомлень.";
 NSPhotoLibraryAddUsageDescription = "Signal зберігатиме фото до бібліотеки фотографій.";
 NSPhotoLibraryUsageDescription = "Signal дасть вам змогу вибрати фото для надсилання з бібліотеки.";
-NSLocalNetworkUsageDescription = "Signal використовує локальну мережу для можливості перенесення вашого облікового запису на новий телефон. Цей дозвіл не буде використовуватись доки ви явно не ініціюєте перенесення даних на новий пристрій.";
+NSLocalNetworkUsageDescription = "Signal використовує локальну мережу для можливості перенесення вашого акаунту на новий телефон. Цей дозвіл не буде використовуватись доки ви явно не ініціюєте перенесення даних на новий пристрій.";
