--- a/Signal/translations/ug.lproj/Localizable.strings
+++ b/Signal/translations/ug.lproj/Localizable.strings
@@ -781,6 +781,9 @@
 /* Accessibility label for leaving a call */
 "CALL_VIEW_LEAVE_CALL_LABEL" = "چاقىرىقتىن ئايرىل";
 
+/* Accessibility label for the More button in the Call Controls row. */
+"CALL_VIEW_MORE_LABEL" = "More";
+
 /* Accessibility label for muting the microphone */
 "CALL_VIEW_MUTE_LABEL" = "ئۈنسىز";
 
@@ -1106,7 +1109,7 @@
 "CONTACT_ABOUT_SHEET_BLOCKED_USER_FORMAT" = "%1$@ چەكلەندى";
 
 /* Indicates that another account is in the user's system contacts. Embeds {{name}} */
-"CONTACT_ABOUT_SHEET_CONNECTION_IN_SYSTEM_CONTACTS" = "%1$@ is in your phone contacts";
+"CONTACT_ABOUT_SHEET_CONNECTION_IN_SYSTEM_CONTACTS" = "%1$@ سىزنىڭ ئالاقىداش تىزىملىكىڭىزدە";
 
 /* Indicates that the user has no messages with the other account. Embeds {{name}} */
 "CONTACT_ABOUT_SHEET_NO_DIRECT_MESSAGES" = "%1$@ بىلەن بىۋاسىتە ئۇچۇرلاشماڭ";
@@ -1154,7 +1157,7 @@
 "CONTACT_FIELD_ORGANIZATION" = "تەشكىل";
 
 /* Title for a view showing the note that has been set for a profile. */
-"CONTACT_NOTE_TITLE" = "Note";
+"CONTACT_NOTE_TITLE" = "خاتىرە";
 
 /* Body for contact permission action sheet */
 "CONTACT_PERMISSION_ACTION_SHEET_BODY" = "پاراڭدىكى ئالاقىداش ئىسمى ۋە رەسىمىنى كۆرسىتىدۇ:";
@@ -1373,7 +1376,7 @@
 "CONVERSATION_SETTINGS_ADD_TO_EXISTING_CONTACT" = "مەۋجۇت ئالاقەداشقا قوش";
 
 /* button in conversation settings view. */
-"CONVERSATION_SETTINGS_ADD_TO_SYSTEM_CONTACTS" = "Add to Phone Contacts";
+"CONVERSATION_SETTINGS_ADD_TO_SYSTEM_CONTACTS" = "تېلېفون ئالاقىداشلىرىغا قوشۇش";
 
 /* Footer for the 'attributes access' section in conversation settings view. */
 "CONVERSATION_SETTINGS_ATTRIBUTES_ACCESS_SECTION_FOOTER" = "گۇرۇپپىنىڭ ئىسمى، سۈرىتى، تونۇشتۇرۇشى ۋە كۆرۈن-غايىب ئۇچۇرنىڭ ۋاقىت خاتىرىلىگۈچىنى كىم ئۆزگەرتەلەيدىغانلىقىنى تاللاڭ.";
@@ -1787,7 +1790,7 @@
 "DELETE_CONTACT_ACTION_SHEET_BUTTON" = "ئۆچۈرۈش";
 
 /* An explanation of what happens in Signal when you remove a system contact. */
-"DELETE_CONTACT_ACTION_SHEET_EXPLANATION" = "This person will be deleted from your phone contacts. You won't see this person when searching. You'll get a message request if they message you in the future.";
+"DELETE_CONTACT_ACTION_SHEET_EXPLANATION" = "بۇ كىشى سىزنىڭ تېلېفون ئالاقىداشلىرىڭىز تىزىملىكىدىن ئۆچۈرىلىدۇ. ئىزدىگەن ۋاقتىڭىزدا بۇ كىشىنى كۆرمەيسىز. كەلگۈسىدە ئۇلار سىزگە ئۇچۇر يوللاپ قالسا، سىزگە ئاۋۋال ئۇچۇر تەلىپى كېلىدۇ.";
 
 /* Title of action sheet confirming the user wants to delete a system contact. */
 "DELETE_CONTACT_ACTION_SHEET_TITLE" = "ئالاقىداشنى ئۆچۈرۈپ، تىزىملىكىڭزدىن چىقرىۋېتەمسىز؟";
@@ -1799,7 +1802,7 @@
 "DELETE_CONTACT_CONFIRMATION_TOAST" = "%1$@ ئالاقىداشلىرىڭىزدىن ئۆچۈرىۋېتىلدى ۋە چىقىرىۋېتىلدى.";
 
 /* Label indicating a user who deleted their account. */
-"DELETED_USER" = "Deleted Account";
+"DELETED_USER" = "ھېساباتنى ئۆچۈرۈش";
 
 /* Notification warning the user that they have been de-registered. */
 "DEREGISTRATION_NOTIFICATION" = "سىز بۇ ئۈسكۈنىدە Signal دىن چېكىنىپ چىققان.";
@@ -3788,10 +3791,10 @@
 "LINK_PREVIEW_UNKNOWN_DOMAIN" = "ئۇلانما ئالدىن كۆرۈش";
 
 /* Shown in an alert when trying to edit a contact. */
-"LINKED_DEVICE_CONTACTS_NOT_ALLOWED" = "Managing phone contacts is no longer available on iPad. To add Signal connections to your phone contacts open Signal on your phone.";
+"LINKED_DEVICE_CONTACTS_NOT_ALLOWED" = "تېلېفون ئالاقىداشلىرىنى ئەمدى iPad دە باشقۇرغىلى بولمايدۇ. Signal  ئالاقىداشلىرىنى تېلېفون ئالاقىداشلىرىڭىزغا قوشۇش ئۈچۈن Signal نى تېلېفونىڭىزدا ئېچىڭ.";
 
 /* Shown in a banner when you tap the 'New Chat' icon at the top of the list of chats. */
-"LINKED_DEVICE_MANAGE_CONTACTS_BANNER" = "Managing phone contacts is no longer supported on iPad. This device will continue to sync any changes to your contact list from Signal on your phone.";
+"LINKED_DEVICE_MANAGE_CONTACTS_BANNER" = "iPad ئەمدى تېلېفون ئالاقىداشلىرىنى باشقۇرۇش ئىقتىدارىنى قوللىمايدۇ. بۇ ئۈسكۈنە Signal دىكى تېلېفون ئالاقىداشلار تىزىملىكىگە قىلىنغان ھەر قانداق ئۆزگىرىشىنى داۋاملىق ماسقەدەملەيدۇ.";
 
 /* A button shown in a banner when you tap the 'New Chat' icon at the top of the list of chats. Tapping it opens a website with more details. */
 "LINKED_DEVICE_MANAGE_CONTACTS_LEARN_MORE" = "تەپسىلاتى";
@@ -4463,13 +4466,13 @@
 "NICKNAME_BUTTON_TITLE" = "لەقەم";
 
 /* The message for a prompt confirming that the user wants to delete the nickname and note. */
-"NICKNAME_EDITOR_DELETE_CONFIRMATION_MESSAGE" = "This will permanently delete this nickname and note.";
+"NICKNAME_EDITOR_DELETE_CONFIRMATION_MESSAGE" = "بۇ مەشغۇلات بۇ لەقەم ۋە خاتىرىنى مەڭگۈلۈك ئۆچۈرىدۇ.";
 
 /* The title for a prompt confirming that the user wants to delete the nickname and note. */
-"NICKNAME_EDITOR_DELETE_CONFIRMATION_TITLE" = "Delete Nickname?";
+"NICKNAME_EDITOR_DELETE_CONFIRMATION_TITLE" = "لەقەمنى ئۆچۈرەمسىز؟";
 
 /* The description below the title on the profile nickname editor view. */
-"NICKNAME_EDITOR_DESCRIPTION" = "Nicknames & notes are stored with Signal and end-to-end encrypted. They are only visible to you.";
+"NICKNAME_EDITOR_DESCRIPTION" = "لەقەم ۋە خاتىرىلەر Signal دا ئۇچتىن ئۇچقا مەخپىيلەشتۈرۈلگەن ھالدا ساقلىنىدۇ. ئۇلارنى پەقەت سىز كۆرەلەيسىز.";
 
 /* Placeholder text it the text field for the family name in the profile nickname editor. */
 "NICKNAME_EDITOR_FAMILY_NAME_PLACEHOLDER" = "فامىلە";
@@ -6233,10 +6236,10 @@
 "SETTINGS_APPEARANCE_APP_ICON" = "ئەپ سىنبەلگىسى";
 
 /* Footer for avatar section in appearance settings */
-"SETTINGS_APPEARANCE_AVATAR_FOOTER" = "Display phone contact photos if available.";
+"SETTINGS_APPEARANCE_AVATAR_FOOTER" = "ئەگەر بولسا تېلېفون ئالاقىداشلار رەسىمىنى كۆرسىتىڭ.";
 
 /* Title for switch to toggle preference between contact and profile avatars */
-"SETTINGS_APPEARANCE_AVATAR_PREFERENCE_LABEL" = "Use Phone Contact Photos";
+"SETTINGS_APPEARANCE_AVATAR_PREFERENCE_LABEL" = "تېلېفون ئالاقىداشلار رەسىمىنى ئىشلىتىش";
 
 /* The title for the theme section in the appearance settings. */
 "SETTINGS_APPEARANCE_THEME_TITLE" = "تېما";
@@ -7472,7 +7475,7 @@
 "STORY_SETTINGS_LEARN_MORE_SHEET_BULLET_2" = "ئۇچۇرلىشىش ئىلتىماسىنى قوبۇل قىلىش ئارقىلىق";
 
 /* Third bullet point for the explainer sheet for signal connections */
-"STORY_SETTINGS_LEARN_MORE_SHEET_BULLET_3" = "Having them in your phone contacts";
+"STORY_SETTINGS_LEARN_MORE_SHEET_BULLET_3" = "ئۇلارنى ئالاقىداش تىزىملىكىڭىزگە قوشۇڭ";
 
 /* Footer for the explainer sheet for signal connections */
 "STORY_SETTINGS_LEARN_MORE_SHEET_FOOTER" = "ئالاقىداشلىرىڭىز ئىسمىڭىز ۋە رەسىمىڭىزنى كۆرەلەيدۇ، ۋە ئۇلارنى «ھېكايەم» نى كۆرەلمەيدىغان قىلىپ تەڭشىمىگەن بولىسڭىز، «ھېكايەم» گە يوللىغان مەزمۇنلارنىمۇ كۆرەلەيدۇ.";
